# msxxx

./: .gitignore  README.md
firmware/fpga/src/: virtual_dip_switch.v  virtual_leds.v
firmware/pico/: CMakeLists.txt
firmware/pico/src/: fs.h  i2c_expander.cpp  i2c_expander.h  main.cpp  mcu_config.h  storage.h
firmware/pico/src/gamepads/: common.h  gamepads.cpp  gamepads.h
firmware/pico/src/littlefs/: lfs.h  lfs_util.h
firmware/pico/src/ssd1306/: ssd1306_i2c.c  ssd1306_i2c.h  ssd1306_i2c_example.c
hardware/: audio.kicad_sch  fp-info-cache  fp-lib-table  inputs.kicad_sch  main.kicad_sch  msxxx.kicad_pcb  msxxx.kicad_prl  msxxx.kicad_pro  msxxx.kicad_sch  slots.kicad_sch  sym-lib-table  video.kicad_sch  ~msxxx.kicad_pcb.lck
hardware/controller_board_n64/controller_board_n64/: controller_board_n64.kicad_pro  controller_board_n64.kicad_sch  sym-lib-table
hardware/libraries/: Chimera.kicad_sym  SCART-F.kicad_mod  SNES_Controller_Socket.kicad_mod  SSD1306-0.91-OLED-4pin-128x32.kicad_mod  TRHMSX.bak  TRHMSX.kicad_sym  Untitled.kicad_mod
hardware/libraries/74HC4066D_653/: 74HC4066D_653.kicad_sym  SOIC127P600X175-14N.kicad_mod
hardware/libraries/AD8073JNZ/: AD8073JNZ.kicad_sym  AD8073JNZ.step  DIP254P762X533-14.kicad_mod
hardware/libraries/AD8073JRZ/: SOIC127P600X175-14N.kicad_mod
hardware/libraries/ADV7123/: ADV7123.step  QFP50P900X900X160-48N.kicad_mod
hardware/libraries/LF351DT/: LF351DT.kicad_sym  SOIC127P600X175-8N.kicad_mod
hardware/libraries/SCART-F/: SCART-F.kicad_mod  SCART-F.kicad_sym
